Fixed styling on Safari

--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,21 @@ html, body {
     background: linear-gradient(to bottom, rgba(0,1,21,0.2), rgba(0,56,72,0.8));
     border-radius: 4px;
     border: 1px solid #2e6da4;
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+            -ms-flex-align: center;
+                align-items: center;
     width:150px; 
     height:140px;
 }
